--- a/index.css
+++ b/index.css
@@ -1,11 +1,16 @@
 /*======= Font rengini #3C373B yapan bir yeni bir universal selector yaratın*/
-
-
+* {
+  color: #3C373B;
+}
+body {
+  margin: 0;
+}
 h1 {
   font-family: 'Gaegu', cursive;
   margin: 20px 0;
   /*=======  Font size'ı 60px yapın ve text'i ortalayın(center) */
-  font-size: 10px;
+  font-size: 60px;
+  text-align: center;
 }
 
 h2, h3, h4, h5, h6 {
@@ -13,7 +18,7 @@ h2, h3, h4, h5, h6 {
   margin-bottom: 0;
   padding: 0 10px;
   /*=======  Font size'ı 30px yapın*/
-  font-size: 10px;
+  font-size: 30px;
 }
 
 /*======= Sayfadaki TÜM p tag'leri için aşağıdaki özellikleri içeren bir selector yaratın:
@@ -24,6 +29,13 @@ padding: 10px;
 line-height: 1.4;
 
 */
+p{
+  font-size: 16px;
+  font-family: roboto;
+  padding: 10px;
+  line-height: 1.4;
+
+}
 
 
 /*======= Sayfadaki TÜM imajlar için aşağıdaki özellikleri içeren bir selector yaratın:
@@ -31,6 +43,10 @@ line-height: 1.4;
   border-radius: 10px;
 
 */
+img {
+  border-radius: 40px;
+  width: 100%;
+}
 
 .content-row {
   display: flex;
@@ -38,10 +54,24 @@ line-height: 1.4;
 
 .content-row div {
   /*======= margin propery yaratın.  Değerini 20px olarak atayın*/
+  margin: 20px;
+}
+
+.content-img {
+  width: 40%;
+}
+
+.content-text {
+  width: 60%;
+}
+
+.content-img + .content-text {
+  margin-left: 0;
 }
 
 .container {
   /*======= width property yaratın. Değerini 605px olarak atayın */
+  width: 805px;
   margin: 0 auto;
 }
 
@@ -55,17 +85,28 @@ line-height: 1.4;
   text-decoration: none;
   margin-bottom: 20px;
    /*======= background property yaratın. Değerini #E79947 olarak atayınız.*/
+   background: #E79947;
   
 }
 
 .container header nav a:hover {
 /*======= background property yaratın ve değeri white olsun.  Sonra, color property yaratın ve değerini yapın. */
+background: white;
+color: #E79947;
 }
 
 /*======= Hakkmızda bölümü için aşağıdaki stilleri içeren bir selector yaratın:
   margin-top: 20px;
 */
+.full-width {
+  width: 100%;
+  background-color: aliceblue;
+  padding: 30px 0 30px 0;
+}
 
+.about-section{
+  margin-top: 20px;
+}
 .contact-section {
   border-top: 1px dashed black;
   padding: 20px 0;
@@ -79,6 +120,9 @@ line-height: 1.4;
 /*======= contact-section class'da address tag'i için aşağdıaki stilleri içeren bir selector yaratın:
    line-height: 2;
 */
+.contact-address {
+  line-height: 2;
+}
 
 footer {
   width: 100%;
@@ -89,6 +133,7 @@ footer {
 footer .footer-content { 
   margin: 0 auto; 
   /*======= width property yaratın. Değerini 605px olarak atayın */
+  width: 605px;
   
 }
 
@@ -101,12 +146,17 @@ footer nav {
   display: flex;
 }
 
+footer nav a {
+  margin: 10px;
+  color: black;
+  text-decoration: underline;
+}
+
 /*======= Footer'daki anchor tag için aşağıdaki stilleri içeren bir selector yaratın:
   margin: 10px;
   color: black;
   text-decoration: underline;
 */
-
 
 footer nav a:first-child {
   margin-left: 0;
@@ -115,8 +165,12 @@ footer nav a:first-child {
 /*======= Footer nav'daki anchor tag için aşağıdaki stilleri içeren bir hover state yaratın:
   color: white;
 */
+footer nav a:hover {
+  color: white;
+}
 
 footer .footer-content .copyright {
   padding: 20px 0;
    /*======= metni ortalayacak kodu yazın */
+   text-align: center;
 }
